--- a/src/app/components/contact-section.css
+++ b/src/app/components/contact-section.css
@@ -1,1 +1,89 @@
 /* Contact section styles */
+.contact-section {
+  background: var(--dark-bg);
+  color: rgba(255, 255, 255, 0.75);
+}
+
+.contact-section a {
+  color: rgba(255, 255, 255, 0.75);
+}
+
+.contact-section a:hover {
+  color: var(--primary-color);
+}
+
+.contact-section .section-title {
+  margin-bottom: 30px;
+  color: #fff;
+}
+
+.contact-section .section-intro {
+  max-width: 800px;
+  margin: 0 auto;
+  margin-bottom: 60px;
+  font-size: 16px;
+}
+
+.contact-section .contact-block {
+  max-width: 800px;
+  margin-bottom: 90px;
+}
+
+.contact-section .contact-block .item {
+  margin-bottom: 30px;
+}
+
+.contact-section .contact-block .title {
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #fff;
+  margin-top: 0;
+  margin-bottom: 5px;
+  font-size: 18px;
+}
+
+.contact-section .contact-block .icon-holder {
+  margin-bottom: 15px;
+}
+
+.contact-section .contact-block i {
+  margin-right: 5px;
+  color: var(--primary-color);
+  font-size: 24px;
+}
+
+.contact-section .channels-list {
+  margin-bottom: 45px;
+}
+
+.contact-section .channels-list a {
+  opacity: 0.4;
+}
+
+.contact-section .channels-list a:hover {
+  opacity: 1;
+}
+
+.contact-section .channels-list li {
+  margin-bottom: 15px;
+}
+
+.contact-section .social-media-list {
+  margin-bottom: 0;
+}
+
+.contact-section .social-media-list a {
+  color: rgba(255, 255, 255, 0.4);
+}
+
+.contact-section .social-media-list a:hover {
+  color: #fff;
+}
+
+.contact-section .social-media-list li {
+  margin-bottom: 15px;
+}
+
+.contact-section .social-media-list i {
+  font-size: 32px;
+}
