--- a/src/styles.css
+++ b/src/styles.css
@@ -8,11 +8,275 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:400,500,600,700,800,900');
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700,400italic,600italic,700italic');
 
-/* Import template styles */
-@import '/css/theme-1.css';
+/* Theme 8 - Pink themed CSS extracted and organized */
 
+/* Global Variables for Theme 8 */
+:root {
+  --primary-color: #EC3A81;
+  --primary-hover: #c6135b;
+  --primary-darker: #ea2372;
+  --secondary-color: #1c1d21;
+  --dark-bg: #101113;
+  --text-dark: #101113;
+  --text-light: rgba(255, 255, 255, 0.6);
+  --text-muted: #4f545e;
+  --border-light: #eee;
+  --section-bg-light: #f5f5f5;
+}
+
+/* Global Styles */
 html, body {
-  display: block;
   height: 100%;
-  font-family: 'Source Sans Pro', Arial, sans-serif;
+  display: block;
+}
+
+body {
+  font-family: 'Source Sans Pro', sans-serif;
+  color: var(--text-dark);
+  font-size: 14px;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 900;
+}
+
+p {
+  margin-bottom: 15px;
+  line-height: 1.5;
+}
+
+/* Links */
+a {
+  color: var(--primary-color);
+  transition: all 0.4s ease-in-out;
+  text-decoration: none;
+}
+
+a:hover, 
+a:active {
+  text-decoration: underline;
+  color: var(--primary-darker);
+}
+
+a:focus {
+  text-decoration: none;
+  color: var(--primary-darker);
+  outline: none;
+}
+
+/* Buttons */
+.btn, 
+a.btn {
+  transition: all 0.4s ease-in-out;
+  border-radius: 0;
+  background-clip: padding-box;
+  font-weight: bold;
+  letter-spacing: 0.5px;
+  text-decoration: none;
+}
+
+.btn:focus, 
+a.btn:focus {
+  box-shadow: none;
+}
+
+/* Primary Buttons */
+a.btn-primary, 
+.btn-primary {
+  background: var(--primary-color);
+  border: 2px solid var(--primary-color);
+  color: #fff;
+  text-transform: uppercase;
+  box-shadow: inset 0 0 0 0 var(--primary-hover);
+}
+
+a.btn-primary:hover, 
+.btn-primary:hover {
+  box-shadow: inset 0 100px 0 0 var(--primary-hover);
+}
+
+a.btn-primary:hover, 
+a.btn-primary:active, 
+a.btn-primary:focus, 
+.btn-primary:hover, 
+.btn-primary:active, 
+.btn-primary:focus {
+  background: var(--primary-hover);
+  border: 2px solid var(--primary-hover);
+  color: #fff;
+  outline: none;
+  box-shadow: none;
+}
+
+/* Secondary Buttons */
+a.btn-secondary, 
+.btn-secondary {
+  background: var(--secondary-color);
+  border: 2px solid var(--secondary-color);
+  color: #fff;
+  text-transform: uppercase;
+  box-shadow: inset 0 0 0 0 var(--primary-color);
+}
+
+a.btn-secondary:hover, 
+.btn-secondary:hover {
+  box-shadow: inset 0 100px 0 0 var(--primary-hover);
+}
+
+a.btn-secondary:hover, 
+a.btn-secondary:active, 
+a.btn-secondary:focus, 
+.btn-secondary:hover, 
+.btn-secondary:active, 
+.btn-secondary:focus {
+  background: var(--primary-hover);
+  border: 2px solid var(--primary-hover);
+  color: #fff;
+  outline: none;
+  box-shadow: none;
+}
+
+/* Ghost Buttons */
+a.btn-ghost-primary, 
+.btn-ghost-primary {
+  background: none;
+  border: 2px solid var(--primary-color);
+  color: var(--primary-color);
+  box-shadow: inset 0 0 0 0 var(--primary-color);
+  text-transform: uppercase;
+}
+
+a.btn-ghost-primary:hover, 
+.btn-ghost-primary:hover {
+  box-shadow: inset 0 100px 0 0 var(--primary-color);
+  background: var(--primary-color);
+  color: #fff;
+  border: 2px solid var(--primary-color);
+}
+
+a.btn-ghost-secondary, 
+.btn-ghost-secondary {
+  background: none;
+  border: 2px solid var(--text-dark);
+  color: var(--text-dark);
+  box-shadow: inset 0 0 0 0 var(--text-dark);
+  text-transform: uppercase;
+}
+
+a.btn-ghost-secondary:hover, 
+.btn-ghost-secondary:hover {
+  background: var(--text-dark);
+  box-shadow: inset 0 100px 0 0 var(--text-dark);
+  color: #fff;
+  border: 2px solid var(--text-dark);
+}
+
+a.btn-cta, 
+.btn-cta {
+  font-size: 16px;
+  padding: 10px 30px;
+}
+
+/* Form Elements */
+.form-control {
+  box-shadow: none;
+  height: 45px;
+  border-color: var(--border-light);
+}
+
+.form-control::placeholder {
+  color: #ccc;
+}
+
+.form-control:focus {
+  border-color: #e1e1e1;
+  box-shadow: none;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="password"],
+input[type="submit"],
+input[type="button"],
+textarea {
+  appearance: none;
+}
+
+label {
+  color: var(--primary-darker);
+}
+
+.form-group {
+  margin-bottom: 30px;
+}
+
+/* Utilities */
+.highlight {
+  color: var(--primary-color);
+}
+
+/* Sections */
+.section {
+  padding-top: 90px;
+  padding-bottom: 90px;
+}
+
+.section-title {
+  text-transform: uppercase;
+  margin-top: 0;
+  margin-bottom: 60px;
+  font-weight: 800;
+  font-size: 32px;
+  position: relative;
+  padding-bottom: 5px;
+}
+
+.section-title::after {
+  content: "";
+  display: inline-block;
+  height: 4px;
+  width: 60px;
+  background: var(--primary-color);
+  position: absolute;
+  left: 50%;
+  bottom: -5px;
+  margin-left: -30px;
+  border-radius: 1px;
+  background-clip: padding-box;
+}
+
+/* Logo */
+.logo-holder {
+  background-image: url("/images/logo-8.svg");
+  height: 100px;
+  text-align: center;
+  background-color: transparent;
+  background-position: center center;
+  background-repeat: no-repeat;
+  margin-top: 0;
+  margin-bottom: 30px;
+  text-indent: -9999px;
+  overflow: hidden;
+  background-size: contain;
+}
+
+/* Media Queries */
+@media (max-width: 767.98px) {
+  .section {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+  
+  .section-title {
+    font-size: 24px;
+    margin-bottom: 40px;
+  }
+  
+  .logo-holder {
+    height: 50px;
+  }
 }
