--- a/src/app/features/contact/contact-section.html
+++ b/src/app/features/contact/contact-section.html
@@ -1,4 +1,4 @@
-<div id="contact" class="contact-section section text-center">
+<div class="contact-section section text-center">
   <div class="container">
     <h2 class="section-title">Contact</h2>
     <div class="section-intro center-block">
