--- a/src/app/features/gigs/gigs-section.html
+++ b/src/app/features/gigs/gigs-section.html
@@ -1,4 +1,4 @@
-<section id="gigs" class="gigs-section section">
+<section class="gigs-section section">
   <div class="container">
     <h2 class="section-title text-center">Upcoming Gigs</h2>
     <div class="gigs-container">
