--- a/src/app/features/merch/merch-section.html
+++ b/src/app/features/merch/merch-section.html
@@ -1,4 +1,4 @@
-<section id="merch" class="merch-section section text-center">
+<section class="merch-section section text-center">
   <div class="container">
     <h2 class="section-title">Merch Store</h2>
     <div class="row">
