--- a/src/app/features/music/music-section.html
+++ b/src/app/features/music/music-section.html
@@ -1,4 +1,4 @@
-<section id="music" class="music-section section text-center">
+<section class="music-section section text-center">
   <div class="container">
     <h2 class="section-title">Music</h2>
     
