--- a/src/app/features/promo/promo-section.html
+++ b/src/app/features/promo/promo-section.html
@@ -1,4 +1,4 @@
-<section id="promo" class="promo-section section">
+<section class="promo-section section">
   <div class="promo-carousel-holder">
     <div 
       id="promo-carousel" 
