--- a/src/app/features/about/about-section.html
+++ b/src/app/features/about/about-section.html
@@ -1,4 +1,4 @@
-<section id="about" class="about-section section text-center">
+<section class="about-section section text-center">
   <div class="container">
     <h2 class="section-title">About</h2>
     <div class="section-intro ml-auto mr-auto">
