--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,8 @@
 /* Import Bootstrap 5 */
 @import 'bootstrap/dist/css/bootstrap.min.css';
 
-/* Import FontAwesome */
-@import '@fortawesome/fontawesome-free/css/all.min.css';
+/* Import minimal FontAwesome icons (only what we use) */
+@import './assets/icons.css';
 
 /* Import Google Fonts */
 @import url('https://fonts.googleapis.com/css?family=Raleway:400,500,600,700,800,900');
