--- a/src/app/features/about/about-section.html
+++ b/src/app/features/about/about-section.html
@@ -1,7 +1,7 @@
 <section class="about-section section text-center">
   <div class="container">
     <h2 class="section-title">About</h2>
-    <div class="section-intro ml-auto mr-auto">
+    <div class="section-intro">
       Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. 
       Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. 
       Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
