--- a/src/app/features/about/about-section.css
+++ b/src/app/features/about/about-section.css
@@ -38,6 +38,11 @@
   margin-left: auto;
   margin-right: auto;
   display: inline-block;
+  border-radius: 50%;
+  width: 240px;
+  height: 240px;
+  object-fit: cover;
+  object-position: center;
 }
 
 .about-section .member-label {
