--- a/src/app/features/about/about-section.html
+++ b/src/app/features/about/about-section.html
@@ -10,7 +10,7 @@
     <div class="members-block">
       <div class="row">
         @for (member of bandMembers(); track member.id) {
-          <div class="item col-6 col-lg-3">
+          <div class="item col-12 col-md-6 col-lg-3">
             <div class="item-inner">
               <div class="member-profile">
                 <img class="img-fluid" [src]="member.image" [alt]="member.name">
