--- a/src/app/core/layout/header.html
+++ b/src/app/core/layout/header.html
@@ -7,8 +7,8 @@
         (click)="toggleNavbar()"
         [attr.aria-expanded]="isNavbarOpen()"
         aria-controls="navbar-collapse" 
-        aria-label="Toggle navigation">
-        <span class="toggle-title">Menu</span>
+        aria-label="Navigation umschalten">
+        <span class="toggle-title">Menü</span>
         <span class="navbar-toggler-icon"></span>
       </button>  
       
