--- a/src/app/features/about/about-section.html
+++ b/src/app/features/about/about-section.html
@@ -1,10 +1,10 @@
 <section class="about-section section text-center">
   <div class="container">
-    <h2 class="section-title">About</h2>
+    <h2 class="section-title">Über uns</h2>
     <div class="section-intro">
-      Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. 
-      Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. 
-      Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+      Willkommen bei Petruschka! Wir sind eine leidenschaftliche Gruppe von Musikern und Geschichtenerzählern, 
+      die es sich zur Aufgabe gemacht haben, Kindern und Familien unvergessliche Erlebnisse zu schenken. 
+      Mit unseren interaktiven Aufführungen erwecken wir märchenhafte Welten zum Leben.
     </div>
     
     <div class="members-block">
