--- a/src/app/features/promo/promo-section.html
+++ b/src/app/features/promo/promo-section.html
@@ -66,7 +66,7 @@
                   @if (update.isCountdown && update.countdownDate) {
                     <div class="countdown">
                       <app-countdown [targetDate]="update.countdownDate"></app-countdown>
-                      <span>till release</span>
+                      <span>bis zur Veröffentlichung</span>
                     </div>
                   }
                   <p class="intro" [innerHTML]="update.description"></p>
