--- a/src/app/features/about/about-section.html
+++ b/src/app/features/about/about-section.html
@@ -11,13 +11,17 @@
       <div class="row">
         @for (member of bandMembers(); track member.id) {
           <div class="item col-12 col-sm-6 col-lg-4 col-xl-3">
-            <div class="item-inner">
+            <div class="item-inner member-card" (click)="openMemberBio(member)">
               <div class="member-profile">
                 <img class="img-fluid" [src]="member.image" [alt]="member.name">
               </div>
               <div class="member-label">{{ member.instrument }}</div>
               <h3 class="member-name">{{ member.name }}</h3>
-              <div class="member-desc">{{ member.description }}</div>
+              <div class="member-desc">{{ member.description | truncate:150 }}</div>
+              <div class="read-more-hint">
+                <i class="fas fa-book-open"></i>
+                <span>Mehr erfahren</span>
+              </div>
             </div>
           </div>
         }
