--- a/src/styles.css
+++ b/src/styles.css
@@ -31,9 +31,9 @@ html, body {
 }
 
 body {
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Raleway', sans-serif;
   color: var(--text-dark);
-  font-size: 14px;
+  font-size: 16px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
@@ -264,22 +264,7 @@ label {
   background-size: contain;
 }
 
-/* Media Queries */
-@media (max-width: 767.98px) {
-  .section {
-    padding-top: 60px;
-    padding-bottom: 60px;
-  }
-  
-  .section-title {
-    font-size: 24px;
-    margin-bottom: 40px;
-  }
-  
-  .logo-holder {
-    height: 50px;
-  }
-}
+
 
 /* CDK Dialog Overlay Styles */
 .cdk-overlay-container {
@@ -288,7 +273,7 @@ label {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 1000;
+  z-index: 1030;
 }
 
 .custom-dialog-backdrop {
@@ -324,5 +309,22 @@ label {
   to {
     opacity: 1;
     transform: scale(1) translateY(0);
+  }
+}
+
+/* Media Queries */
+@media (max-width: 767.98px) {
+  .section {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+  
+  .section-title {
+    font-size: 24px;
+    margin-bottom: 40px;
+  }
+  
+  .logo-holder {
+    height: 50px;
   }
 }
