--- a/src/app/features/gigs/gigs-section.html
+++ b/src/app/features/gigs/gigs-section.html
@@ -16,7 +16,7 @@
                 <ul class="meta-list list-inline">
                   <li class="list-inline-item location">
                     <i class="fas fa-map-marker-alt"></i>
-                    <a [href]="'#'">{{ gig.venue }}, {{ gig.location }}</a>
+                    <a [href]="'#'">{{ gig.location }}</a>
                   </li>
                   <li class="list-inline-item time">
                     <i class="far fa-clock"></i>
