--- a/src/app/features/about/about-section.html
+++ b/src/app/features/about/about-section.html
@@ -1,6 +1,6 @@
 <section class="about-section section text-center">
   <div class="container">
-    <h2 class="section-title">Über uns</h2>
+    <h2 class="section-title">Team</h2>
     <div class="section-intro">
       Willkommen bei Petruschka! Wir sind eine leidenschaftliche Gruppe von Musikern und Geschichtenerzählern, 
       die es sich zur Aufgabe gemacht haben, Kindern und Familien unvergessliche Erlebnisse zu schenken. 
