--- a/src/app/features/contact/contact-section.html
+++ b/src/app/features/contact/contact-section.html
@@ -1,6 +1,6 @@
 <div class="contact-section section text-center">
   <div class="container">
-    <h2 class="section-title">Kontakt</h2>
+    <h2 class="section-title">Über uns</h2>
     <div class="section-intro center-block">
       Haben Sie Fragen oder möchten Sie eine Aufführung buchen? Wir freuen uns auf Ihre Nachricht! 
       Kontaktieren Sie uns per E-Mail oder folgen Sie uns auf unseren sozialen Kanälen, 
