--- a/src/app/features/gigs/gigs-section.html
+++ b/src/app/features/gigs/gigs-section.html
@@ -1,6 +1,6 @@
 <section class="gigs-section section">
   <div class="container">
-    <h2 class="section-title text-center">Kommende Auftritte</h2>
+    <h2 class="section-title text-center">Kommende Aufführungen</h2>
     <div class="gigs-container">
       @for (gig of gigs(); track gig.id) {
         <div class="item">
