--- a/src/app/features/merch/merch-section.html
+++ b/src/app/features/merch/merch-section.html
@@ -1,6 +1,6 @@
 <section class="merch-section section text-center">
   <div class="container">
-    <h2 class="section-title">Merchandise</h2>
+    <h2 class="section-title">Tourneestücke</h2>
     <div class="d-flex justify-content-center flex-wrap merch-container">
       @for (item of merchItems(); track item.id; let i = $index) {
         <div class="item">
