--- a/src/app/features/music/music-section.html
+++ b/src/app/features/music/music-section.html
@@ -1,6 +1,6 @@
 <section class="music-section section text-center">
   <div class="container">
-    <h2 class="section-title">Musik</h2>
+    <h2 class="section-title">Hörspiele</h2>
     
     <!-- SoundCloud embeds -->
     <!--div class="sc-block ml-auto mr-auto">
